# DeepSES

./: .gitignore  LICENSE  README.md
run/: CMakeLists.txt  deepses.def  download_random_pdb_or_cif.sh
run/apps/: CMakeLists.txt  create_engine.cc  filter_patches_kernels.cu  interactive-deepses.cc  interactive-deepses_with_ao.cc  interactive-hermosilla-method.cc  interactive-vdw.cc  thrust_wrapper.cu
run/data/engines/: my_unet_3x_8_ch_03_06_25_FP16.trt  unet_4_ch_1-2-4_mults_10_06_25_FP16.trt
run/data/models/: unet_8_ch_1-2-4-4_mults_02_06_25.onnx
run/include/: cif+pdbLoader.h  kernels.h  thrust_wrapper.cuh  utilities.h
run/include/arcballCamera/: arcballCamera.h
run/include/learnopengl/: compute_shader.h  mesh.h  model.h
run/shaders/: CMakeLists.txt  neighbors.cs  passthrough.vs  phase1.cs  phase1_vdw.cs  phase1_vdw_interactive.cs  phase2_subblocks.cs  phong.fs  phong_with_ao.fs  raymarch-molecule.cs  raymarch-molecule_get_visited_patches.cs  raymarch-molecule_no_color.cs  raymarch_get_visited_patches.cu  sdf_hemispherical_ao.cs
train/: environment.yml  learn.py  model_vs_hermosilla.py  models.py  torch2onnx.py
train/models/my_unet_3x_8_ch_03_06_2025/: checkpoint_dict_best_model.tar  model_batch_size=dynamic.onnx
train/models/unet_4_ch_1-2-4_mults_10_06_2025/: model_batch_size=dynamic.onnx
train/unet_4_ch_1-2-4_mults_10_06_2025/: checkpoint_dict_best_model.tar
